--- a/src/pacs-pull/gex-pacs-query.html
+++ b/src/pacs-pull/gex-pacs-query.html
@@ -178,7 +178,7 @@
             value: true,
             observer: '_transitioningChanged',
           },
-          feedId: {
+          feedLink: {
             type: String,
             value: '',
             notify: true,
@@ -251,9 +251,9 @@
         // ready to start the query sequence!
         const start = this.__startPlugin(this.$.API, this.target, data);
         start.then((response) => {
+            console.log(response);
             this.instance = Number(response.data[0].data.id);
-            const regexp = /\d+/gi;
-            this.feedId = response.data[0].links.feed.match(regexp)[0];
+            this.feedLink = response.data[0].links.feed;
             this.push('loadingSteps', 'Contacting the PACS Server...');
             return response;
           })
