--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       app-header {
         color: #fff;
-        background-color: var(--default-primary-color);
+        background-color: var(--dark-primary-color);
       }
 
       iron-pages {
@@ -118,7 +118,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           on-login="handleLogin"></gex-login>
         <gex-home
           name="home"
+          fetching="[[fetching]]"
+          done="[[done]]"
           files="[[files]]"
+          running="[[running]]"
           on-open-dialog="handleOpenDialog"></gex-home>
         <gex-view404
           name="view404"></gex-view404>
@@ -155,10 +158,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             value: {},
             observer: '_pluginInstanceChanged',
           },
+          fetching: {
+            type: Boolean,
+            value: false,
+          },
           files: {
             type: Array,
             value: [],
-          }
+          },
+          done: {
+            type: Boolean,
+            value: true,
+          },
+          running: {
+            type: Boolean,
+            value: false,
+          },
         };
       }
 
@@ -254,6 +269,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       _waitForPluginInstanceFinished(pluginInstance) {
+        this.done = false;
+        this.running = true;
+
         const data = {};
         data.auth = {
           type: 'token',
@@ -264,7 +282,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         .then((result) => {
           this.__formatPlugin(result, this.feed);
           this.set('pluginInstance', result);
-        });
+        })
+        .then(() => this.running = false);
       }
 
       _pluginInstanceChanged(pluginInstance) {
@@ -284,6 +303,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       _fetchFiles(pluginInstance) {
+        this.fetching = true;
 
         const data = {};
         data.auth = {
@@ -294,9 +314,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         data.params.limit = 9999;
         data.params.page_size = 9999;
         this.$.API.handleAs = 'json';
+        //
         this.__getFilesPlugin(this.$.API, data, pluginInstance)
           .then(this._handleFilesResponse.bind(this))
-          .catch(this._handleFilesError.bind(this));
+          .catch(this._handleFilesError.bind(this))
+          .then(() => {
+            this.fetching = false;
+            this.done = true;
+          });
         }
 
         _handleFilesError(error) {
