--- a/src/elements/ami-viewer-2d.html
+++ b/src/elements/ami-viewer-2d.html
@@ -34,10 +34,14 @@
             type: Number,
             value: -1,
           },
-          slice: {
+          stackHelper: {
             type: Object,
             value: {},
-            observer: '_sliceChanged',
+          },
+          stackScene: {
+            type: Object,
+            value: {},
+            observer: '_stackSceneChanged',
           },
         };
       }
@@ -115,11 +119,79 @@
         this._renderer.render( this._scene, this._camera );
       }
 
-      _sliceChanged(oldSlice, newSlice) {
-        // clean up previous state
-        // create the new stackHelper
-        console.log(oldSlice);
-        console.log(newSlice);
+      _stackSceneChanged(stackScene) {
+        if (stackScene === undefined || !stackScene.children) {
+          return;
+        }
+
+        this._scene = stackScene;
+        this.update();
+      }
+
+      update() {
+        const stackHelper = this._scene.children[0];
+        if (stackHelper) {
+          this._stackHelper = stackHelper;
+          const stack = stackHelper.stack;
+          stackHelper.slice.canvasWidth = this._container.clientWidth;
+          stackHelper.slice.canvasHeight = this._container.clientHeight;
+
+          // set camera
+          const worldbb = stack.worldBoundingBox();
+          const lpsDims = new THREE.Vector3(
+            (worldbb[1] - worldbb[0])/2,
+            (worldbb[3] - worldbb[2])/2,
+            (worldbb[5] - worldbb[4])/2
+          );
+
+          // box: {halfDimensions, center}
+          const box = {
+            center: stack.worldCenter().clone(),
+            halfDimensions:
+              new THREE.Vector3(lpsDims.x + 10, lpsDims.y + 10, lpsDims.z + 10),
+          };
+
+          // init and zoom
+          const canvas = {
+              width: this._container.clientWidth,
+              height: this._container.clientHeight,
+            };
+
+          this._camera.directions =
+            [stack.xCosine, stack.yCosine, stack.zCosine];
+          this._camera.box = box;
+          this._camera.canvas = canvas;
+          this._camera.orientation = this._orientation;
+          this._camera.update();
+          this._camera.fitBox(2, 1);
+
+          stackHelper.orientation = this._camera.stackOrientation;
+          // 8 OK, 89 no
+          stackHelper.index = Math.floor(stackHelper.orientationMaxIndex/2);
+        }
+      }
+
+      resize() {
+        // should pass width/height from parent to give parent control
+        // needs up/right vectors to work...
+        console.log(this._container);
+        console.log(this._camera);
+
+        const canvas = {
+          width: this._container.clientWidth,
+          height: this._container.clientHeight,
+        };
+
+        this._camera.canvas = canvas;
+        this._camera.fitBox(2);
+
+        this._renderer.setSize(this._container.clientWidth, this._container.clientHeight);
+
+        // update info to draw borders properly
+        if (this._stackHelper) {
+          this._stackHelper.slice.canvasWidth = this._container.clientWidth;
+          this._stackHelper.slice.canvasHeight = this._container.clientHeight;
+        }
       }
     }
     window.customElements.define(AMIViewer2D.is, AMIViewer2D);
